--- a/public/index.html
+++ b/public/index.html
@@ -217,7 +217,7 @@
                 <div class="center">
 
                     <div class="logo">
-                        <img width="128" src="assets/images/logos/fuse.svg" alt="logo">
+                        <img width="128" src="assets/images/logos/logo_tekmovil_full.png" alt="logo">
                     </div>
 
                     <!-- Material Design Spinner -->
